# mpc_orb_creation

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
demos/: Example_parse_mpcorb_json.ipynb  README.md  demo_parse.py  demo_various.py
json_files/: README.md
json_files/defining_sample_json/convert/: 545808fel_orig.json
json_files/schema_json/: README.md  mpcorb_schema.json  mpcorb_schema_long.json
json_files/template_json/: mpcorb_template.json  mpcorb_template_ORIGINAL.json
json_files/test_jsons/pass_orbfit_standard/: K05SG8D.json
mpc_orb_creation/: README.md  bootstrap.py  convert.py  data_samples.py  filepaths.py  schema.py  template.py
mpc_orb_creation/archaic/: schema_creation.py
src/mpc_orb_creation/: 2000NB21.elements  2000NB21.fel  2000NB21.fop  2000NB21.fou  2000NB21.opp  2000NB21.pro  2000NB21.run  bootstrap.py  construct.py  convert.py  create_output_dictionaries2023.py  create_output_dictionariesNEW2022_03_XX.py  data_samples.py  desig.py  filepaths.py  fort.10  io.py  parse.py  schema.py  template.py  utility_fetch_orbit_results.py  utility_popn.out20230305A  utility_popn.out20230305B  utility_popn.out20230306D  utility_popn.py
src/mpc_orb_creation.egg-info/: PKG-INFO  SOURCES.txt
src/mpc_orb_creation/archaic/: bootstrap.py  schema.py  schema_creation.py
tests/: README.md  test_bootstrap.py  test_construct.py  test_create_output_dictionaries.py  test_data_samples.py  test_fetch.py  test_orbfit_standard.py  test_schema.py  test_template.py  test_utility_popn.py
