[metadata]
name = mpc_orb_creation
version = 0.0.1
author = Minor Planet Center
author_email = mpayne@cfa.harvard.edu
description = For creation of mpc_orb jsons by MPC folks (internal)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Smithsonian/mpc_orb_creation
project_urls =
    Bug Tracker = https://github.com/Smithsonian/mpc_orb_creation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src 
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src 
